--- a/Anchor.toml
+++ b/Anchor.toml
@@ -3,7 +3,7 @@ seeds = false
 skip-lint = false
 
 [programs.devnet]
-nft_lend_borrow = "<ADD YOUR ADDRESS HERE>"
+nft_lend_borrow = "DJ2yQBUMwFkB3cWsVbUZZ4DxmkR4pFf6KxrZMEDD1uwH"
 
 [registry]
 url = "https://api.apr.dev"
